NXP-17290: Fix missing space in attachment name and size

--- a/nuxeo-dm/nuxeo-platform-webapp-core/src/main/resources/themes/css/tabs_content.css
+++ b/nuxeo-dm/nuxeo-platform-webapp-core/src/main/resources/themes/css/tabs_content.css
@@ -139,6 +139,7 @@ author: lkemen@nuxeo.com
   font-size: 1.1em }
 
 .content_block .fieldColumn .detail {
+  margin-left: .5em;
   white-space: nowrap }
 
 .textBlock,
